@@ -3919,18 +3919,6 @@ operator|.
 name|length
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-name|ret
-operator|>
-literal|0
-condition|)
-block|{
-name|position
-operator|+=
-name|ret
-expr_stmt|;
-block|}
 return|return
 name|ret
 return|;
